--- a/gobotany/site/templates/gobotany/_about_navigation.html
+++ b/gobotany/site/templates/gobotany/_about_navigation.html
@@ -1,4 +1,3 @@
-    {# TODO: change url vars below once moved over to site app #}
     <div class="section">
         {% url site-about as u %}
         <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>About Go
@@ -10,7 +9,7 @@
                 Started with the Simple Key</a></h4>
     </div>
     <div class="section">
-        {% url simplekey-help-map as u %}
+        {% url site-advanced-map as u %}
         <h4><a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Advanced Map
                 to Groups</a></h4>
     </div>
