--- a/gobotany/site/templates/gobotany/_page_full_sidebar.html
+++ b/gobotany/site/templates/gobotany/_page_full_sidebar.html
@@ -1,5 +1,9 @@
 {% extends "gobotany/_base.html" %}
 
+{% block header %}
+    {% include "gobotany/_header.html" %}
+{% endblock %}
+
 {% block body_content %}
 <div class="content">
     <div class="container">
@@ -11,4 +15,8 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block footer %}
+    {% include "gobotany/_footer.html" %}
 {% endblock %}
