--- a/gobotany/site/templates/gobotany/_header.html
+++ b/gobotany/site/templates/gobotany/_header.html
@@ -1,15 +1,20 @@
     <header>
         <div class="container">
-            <p class="go-botany"><a 
-            {% ifnotequal request.path "/" %}href="/"{% endifnotequal %}>Go
-                Botany: Discover thousands of New England plants</a></p>
+            {% if page = "home" %}
+                <h1>Go Botany: Discover thousands of New England plants</h1>
+            {% else %}
+                <p class="go-botany"><a 
+                {% ifnotequal request.path "/" %}href="/"{% endifnotequal %}>Go
+                    Botany: Discover thousands of New England plants</a></p>
+            {% endif %}
             <p class="newfs"><a href="http://www.newenglandwild.org/">New
                 England Wild Flower Society</a></p>
             <nav>
                 <a href="javascript:document.getElementById('footer-nav').scrollIntoView();">+<span>sections</span></a>
                 <ul>
                     <li class="home">
-                        <a {% ifnotequal request.path "/" %}href="{% url simplekey-index %}"{% endifnotequal %}>Home</a>
+                        {% url site-home as u %}
+                        <a {% ifnotequal request.path u %}href="{{ u }}"{% endifnotequal %}>Home</a>
                     </li>
                     <li class="plant-id">
                         <a href="{% url simplekey %}">Simple Key</a>
@@ -22,7 +27,7 @@
                         <a href="{% url dich-key-placeholder %}">Dichotomous Key</a>
                     </li>
                     <li class="teaching-tools"><a href="{% url teaching %}">Teaching</a></li>
-                    <li class="about"><a href="{% url simplekey-help-about %}">About</a></li>
+                    <li class="about"><a href="{% url site-about %}">About</a></li>
                 </ul>
                 <div id="search">
                     <form id="search-suggest" action="/search/" autocomplete="off">
@@ -30,7 +35,7 @@
                             value="{{ request.GET.q }}">
                         <button>Search</button>
                         <div class="menu hidden">
-                            <ul></ul>{# TODO: eliminate empty list #}
+                            <ul></ul>
                         </div>
                     </form>
                 </div>
