--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -307,7 +307,8 @@ ul li { margin: 0 0 5px 0; }
 .missing-image { background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #eaf2e2), color-stop(100%, #d6e6c5)); background: -webkit-linear-gradient(top center, #eaf2e2, #d6e6c5); background: -moz-linear-gradient(top center, #eaf2e2, #d6e6c5); background: -o-linear-gradient(top center, #eaf2e2, #d6e6c5); background: linear-gradient(top center, #eaf2e2, #d6e6c5); color: #354d1e; height: 149px; position: relative; width: 160px; }
 
 /* Header */
-body .about { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
+body#home li.home { background: url(/static/images/layout/active-nav-home.png) bottom center no-repeat transparent; text-decoration: none; }
+body.about li.about { background: url(/static/images/layout/active-nav-app.png) bottom center no-repeat; text-decoration: none; }
 
 header { height: 120px; }
 header .container { margin: 0 auto; padding: 0 10px; width: 960px; }
@@ -349,6 +350,7 @@ footer { background: #b4d57f; clear: both; height: 128px; position: relative; wi
 footer .container { margin: 0 auto; padding: 0 10px; width: 960px; }
 footer > img { left: 50%; margin-left: -543px; position: absolute; top: -47px; }
 footer .publisher, footer .navigation { float: left; margin: 0 20px 0 0; padding: 18px 0; width: 305px; }
+footer .navigation { padding-left: 10px; }
 footer h6 { font-family: Verdana, Geneva, sans-serif; font-size: 11px; }
 footer p { font-size: 9px; margin: 0 0 10px 0; }
 footer ul { font-size: 9px; list-style-type: none; margin-bottom: 12px; }
@@ -364,6 +366,54 @@ footer .support { margin-right: 0; padding: 18px 0; }
 
 /* Shadowbox close button */
 #sb-nav-close { background-position: center; background-repeat: no-repeat; padding: 4px; /* Increase activation area a bit */ right: -28px !important; /* Place at top right, but not exactly at the corner so as to avoid Flash video z-index problem */ top: 6px !important; }
+
+/* Home */
+#home { background: url(/static/images/layout/body-home.jpg) repeat-x left top #f3f3c3; }
+#home #all { background: url(/static/images/layout/content-home-bg.jpg) center 72px no-repeat transparent; }
+#home header h1 { background: url(/static/images/branding/logo-toplevel.png) no-repeat transparent; float: left; margin: 0 0 0 67px; height: 107px; width: 595px; display: block; text-indent: -9000px; }
+#home header .newfs a { background: url(/static/images/branding/newfs-logo-toplevel.png) no-repeat transparent; height: 88px; width: 160px; }
+#home header nav { background: url(/static/images/layout/nav-toplevel.png) center 107px no-repeat; height: 160px; padding: 0 0 0 19px; }
+#home header nav li { margin-right: 9px; }
+#home header nav li.home { margin: 0 63px 0 0; }
+#home header nav li.home a { color: #fff; }
+#home header nav li a:hover { background: url(/static/images/layout/active-nav-home.png) bottom center no-repeat transparent; text-decoration: none; }
+#home header #search-suggest .menu { top: 133px; }
+#home .content { clear: left; margin-top: 18px; }
+#home #banner { margin: 10px 0 0; position: absolute; }
+#home #banner > img { display: none; height: 345px; left: 0; position: absolute; top: 0; width: 960px; -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); }
+#home #banner img:first-child { display: block; }
+#home #banner h2 { color: #519136; font-size: 38px; line-height: normal; margin: 0 0 15px 0; }
+#home #banner p { margin: 12px 0 0 0; text-align: left; text-shadow: 0px 1px 1px #fff; }
+#home #banner a#cta { height: 41px; margin: 21px 2px 0; background: url(/static/images/layout/get-started-btn-orange.png) 0 0 no-repeat transparent; display: block; text-indent: -9000px; }
+#home #banner a#cta:hover { background-position: 0 -41px; }
+#home #banner a#cta:active { background-position: 0 -82px; }
+#home #overlay { background: rgba(255, 255, 255, 0.8); height: 318px; padding: 15px 30px 0; position: absolute; left: 646px; text-align: center; top: 6px; width: 248px; z-index: 100; }
+#home .three-col { background: url(/static/images/layout/dot.png) right top repeat-y; float: left; height: 240px; margin: 354px 23px 5px 0; padding: 8px 23px 0 0; width: 289px; }
+#home .three-col.last { background: 0; margin-right: 0; padding: 8px 0 0 0; }
+#home .three-col.last a.learn-more { margin: 33px 0 0 0; }
+#home .three-col h3 { font-size: 24px; }
+#home .three-col h4 { margin: 0 0 3px 0; font-style: italic; color: #807121; }
+#home .three-col a.learn-more { margin: 13px 0 0 0; }
+#home a.learn-more { background: url(/static/images/layout/learn-more-btn.png) 0 0 no-repeat; height: 32px; width: 111px; display: block; text-indent: -9000px; }
+#home a.learn-more:hover { background-position: 0 -32px; }
+#home a.learn-more:active { background-position: 0 -64px; }
+#home a.subscribe { background: url(/static/images/layout/subscribe.png) 0 0 no-repeat; cursor: pointer; height: 16px; width: 87px; display: block; text-indent: -9000px; }
+#home a.subscribe:hover { background-position: 0 -16px; }
+#home a.subscribe:active { background-position: 0 -32px; }
+#home #potd { /* Plant of the Day */ background: #c7e2a1; border: 3px solid #fff; clear: left; height: 140px; margin: 15px 0; padding: 10px; -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3); -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3); box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3); }
+#home #potd > a { display: block; float: left; height: 131px; margin: 5px 5px; overflow: hidden; width: 270px; }
+#home #potd > a img { position: relative; top: -60px; width: 270px; }
+#home #potd .details { margin: 0 0 0 295px; position: absolute; width: 630px; }
+#home #potd .details h3 span.latin { font-style: italic; }
+#home #potd .details h3 span.english { font-size: 12px; color: #807121; }
+#home #potd .details p { height: 72px; overflow: hidden; }
+#home .donate { padding: 0; margin: 15px 0; border: 3px solid #fff; background: #f1ebae; -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3); -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3); box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3); }
+#home .donate p { margin: 14px; position: relative; }
+#home .donate a { background: url(/static/images/layout/donate-btn.png) 0 0 no-repeat transparent; cursor: pointer; display: block; float: right; height: 32px; padding: 0; position: absolute; right: 0; text-indent: -9000px; top: -6px; width: 104px; }
+#home .donate a:hover { background-position: 0 -32px; }
+#home .donate a:active { background-position: 0 -64px; }
+#home footer { background: none; }
+#home footer > img { display: none; }
 
 /* About */
 #about #main img { float: right; margin: 5px 0 20px 20px; }
