--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -135,11 +135,24 @@ ul li {
     text-decoration: none;
 }
 
+@mixin highlight-global-nav-home {
+    background: url(/static/images/layout/active-nav-home.png) bottom center no-repeat transparent;
+    text-decoration: none;
+}
+
 body {
-    .about {
-        @include highlight-global-nav;
+    &#home {
+        li.home {
+            @include highlight-global-nav-home;
+        }
+    }
+    &.about {
+        li.about {
+            @include highlight-global-nav;
+        }
     }
 }
+
 header {
     height: 120px;
     @include container-div;
@@ -333,6 +346,9 @@ footer {
         padding: 18px 0;
         width: 305px;
     }
+    .navigation {
+        padding-left: 10px;
+    }
     h6 {
         font-family: $body-font;
         font-size: 11px;
@@ -403,6 +419,234 @@ footer {
                                 corner so as to avoid Flash video z-index
                                 problem */
     top: 6px !important;
+}
+
+/* Home */
+
+#home {
+    background: url(/static/images/layout/body-home.jpg) repeat-x left top #f3f3c3;
+    #all {
+        background: url(/static/images/layout/content-home-bg.jpg) center 72px no-repeat transparent;
+    }
+    header {
+        h1 {
+            background: url(/static/images/branding/logo-toplevel.png) no-repeat transparent;
+            float: left;
+            margin: 0 0 0 67px;
+            height: 107px;
+            width: 595px;
+            @include offscreen;
+        }
+        .newfs a {
+            background: url(/static/images/branding/newfs-logo-toplevel.png) no-repeat transparent;
+            height: 88px;
+            width: 160px;
+        }
+        nav {
+            background: url(/static/images/layout/nav-toplevel.png) center 107px no-repeat;
+            height: 160px;
+            padding: 0 0 0 19px;
+            li {
+                margin-right: 9px;
+                &.home {
+                    margin: 0 63px 0 0;
+                    a {
+                        color: #fff;
+                    }
+                }
+                a:hover {
+                    @include highlight-global-nav-home;
+                }
+            }
+        }
+        #search-suggest .menu {
+            top: 133px;
+        }
+    }
+    .content {
+        clear: left;
+        margin-top: 18px;
+    }
+    #banner {
+        margin: 10px 0 0;
+        position: absolute;
+        > img {
+            display: none;
+            height: 345px;
+            left: 0;
+            position: absolute;
+            top: 0;
+            width: 960px;
+            @include single-box-shadow(rgba(0, 0, 0, 0.6), 0px, 0px, 4px);
+        }
+        img:first-child {
+            display: block;
+        }
+        h2 {
+            color: #519136;	
+            font-size: 38px;
+            line-height: normal;
+            margin: 0 0 15px 0;
+        }
+        p {
+            margin: 12px 0 0 0;
+            text-align: left;
+            text-shadow: 0px 1px 1px #fff;	
+        }
+        a#cta {
+            height: 41px;
+            margin: 21px 2px 0;
+            background: url(/static/images/layout/get-started-btn-orange.png) 0 0 no-repeat transparent;	
+            @include offscreen;
+            &:hover {
+                background-position: 0 -41px;	
+            }
+            &:active {
+                background-position: 0 -82px;		
+            }
+        }
+    }
+    #overlay {
+        background: rgba(255, 255, 255, 0.8);
+        height: 318px;
+        padding: 15px 30px 0;
+        position: absolute;
+        left: 646px;
+        text-align: center;
+        top: 6px;
+        width: 248px;
+        z-index: 100;
+    }
+    .three-col {
+        background: url(/static/images/layout/dot.png) right top repeat-y;
+        float: left;
+        height: 240px;
+        margin: 354px 23px 5px 0;
+        padding: 8px 23px 0 0;
+        width: 289px;
+        &.last {
+            background: 0;	
+            margin-right: 0;
+            padding: 8px 0 0 0;
+            a.learn-more {
+                margin: 33px 0 0 0;
+            }
+        }
+        h3 {
+            font-size: 24px;
+        }
+        h4 {
+            margin: 0 0 3px 0;
+            font-style: italic;	
+            color: #807121;
+        }
+        a.learn-more {
+            margin: 13px 0 0 0;	
+        }
+    }
+    a {
+        &.learn-more {
+            background: url(/static/images/layout/learn-more-btn.png) 0 0 no-repeat;
+            height: 32px;
+            width: 111px;
+            @include offscreen;
+            &:hover {
+                background-position: 0 -32px;	
+            }
+            &:active {
+                background-position: 0 -64px;	
+            }
+        }
+        &.subscribe {
+            background: url(/static/images/layout/subscribe.png) 0 0 no-repeat;
+            cursor: pointer;
+            height: 16px;
+            width: 87px;
+            @include offscreen;
+            &:hover {
+                background-position: 0 -16px;
+            }
+            &:active {
+                background-position: 0 -32px;
+            }
+        }
+    }
+    #potd {   /* Plant of the Day */
+        background: #c7e2a1;
+        border: 3px solid #fff;
+        clear: left;
+        height: 140px;
+        margin: 15px 0;
+        padding: 10px;
+        @include single-box-shadow(rgba(0, 0, 0, 0.3), 0px, 0px, 4px);
+        > a {
+            display: block;
+            float: left;
+            height: 131px;
+            margin: 5px 5px;
+            overflow: hidden;
+            width: 270px;
+            img {
+                position: relative;
+                top: -60px;
+                width: 270px;
+            }
+        }
+        .details {
+            margin: 0 0 0 295px;
+            position: absolute;
+            width: 630px;
+            h3 span {
+                &.latin {
+                    font-style: italic;
+                }
+                &.english {
+                    font-size: 12px;
+                    color: #807121;
+                }
+            }
+            p {
+                height: 72px;
+                overflow: hidden;
+            }
+        }
+    }
+    .donate {
+        padding: 0;
+        margin: 15px 0;
+        border: 3px solid #fff;
+        background: #f1ebae;
+        @include single-box-shadow(rgba(0, 0, 0, 0.3), 0px, 0px, 4px);
+        p {
+            margin: 14px;
+            position: relative;
+        }
+        a {
+            background: url(/static/images/layout/donate-btn.png) 0 0 no-repeat transparent;
+            cursor: pointer;
+            display: block;
+            float: right;
+            height: 32px;
+            padding: 0;
+            position: absolute;
+            right: 0;
+            text-indent: -9000px;
+            top: -6px;
+            width: 104px;
+            &:hover {
+	            background-position: 0 -32px;
+            }
+            &:active {
+	            background-position: 0 -64px;
+            }
+        }
+    }
+    footer {
+        background: none;
+        > img {
+            display: none;
+        }
+    }   
 }
 
 /* About */
